--- a/gradle.properties
+++ b/gradle.properties
@@ -7,15 +7,15 @@ archives_base_name=bedrock_destroyer
 mod_id=bedrock_destroyer
 mod_name=Bedrock Destroyer
 mod_version=1.0.0
-mod_description="Removes bedrock from players"
+mod_description=Removes bedrock from players
 maven_group=com.mrmelon54.BedrockDestroyer
 
-architectury_version=10.0.8
+architectury_version=11.0.9
 
-fabric_loader_version=0.14.22
-fabric_api_version=0.89.3+1.20.2
+fabric_loader_version=0.15.3
+fabric_api_version=0.93.1+1.20.4
 
-forge_version=1.20.2-48.0.13
+forge_version=1.20.4-49.0.19
 
-quilt_loader_version=0.21.0
-quilt_fabric_api_version=7.0.0+0.83.0-1.20
+quilt_loader_version=0.22.0
+quilt_fabric_api_version=7.4.0+0.90.0-1.20.1
